erDiagram

    USERS {
        int user_id PK
        uuid public_uuid
        string username
        string first_name
        string last_name_1
        string last_name_2
        string email
        string avatar_url
        string lang_pref
        boolean active
        datetime created_at
        datetime updated_at
    }

    AUTH_ACCOUNTS {
        int auth_account_id PK
        int user_id FK
        string provider
        string provider_user_id
        string email_login
        string password_hash
        boolean active
    }

    ROLES {
        int role_id PK
        string role_name
        string description
        boolean active
    }

    USER_ROLES {
        int user_id FK
        int role_id FK
        datetime assigned_at
        boolean active
    }

    PRO_PROFILES {
        int pro_profile_id PK
        int user_id FK
        string display_name
        string phone_contact
        string location_text
        boolean visible
        boolean verified
        string status
    }

    BILLING_DETAILS {
        int billing_detail_id PK
        int user_id FK
        string legal_name
        string tax_id
        string address_line_1
        string city
        string postal_code
        string country_code
        boolean is_default
    }

    SERVICES {
        int service_id PK
        int pro_profile_id FK
        string service_name
        int duration_min
        decimal base_price
        string currency_code
        boolean active
    }

    SCHEDULES {
        int schedule_id PK
        int pro_profile_id FK
        int weekday
        time start_time
        time end_time
        int slot_duration_min
        boolean active
    }

    BOOKINGS {
        int booking_id PK
        int client_user_id FK
        int pro_profile_id FK
        int service_id FK
        datetime booking_start
        datetime booking_end
        decimal price_total
        string currency_code
        string status
    }

    BOOKING_HISTORY {
        int booking_history_id PK
        int booking_id FK
        string status
        string note
        datetime changed_at
    }

    INVOICES {
        int invoice_id PK
        int booking_id FK
        int billing_detail_id FK
        string invoice_number
        string invoice_type
        decimal total_amount
        string status
        boolean is_reversal
        int reverses_invoice_id FK
        int replaces_invoice_id FK
    }

    PAYMENTS {
        int payment_id PK
        int booking_id FK
        int invoice_id FK
        decimal amount
        string payment_method
        string status
        string receipt_number
    }

    THREADS {
        int thread_id PK
        int user_id FK
        int pro_id FK
        int booking_id FK
        string subject
        string status
    }

    MESSAGES {
        int message_id PK
        int thread_id FK
        int sender_id FK
        datetime sent_at
        boolean active
    }

    SUPPORT_TICKETS {
        int ticket_id PK
        int user_id FK
        string subject
        string status
        boolean active
    }

    USERS ||--o{ AUTH_ACCOUNTS : has
    USERS ||--o{ USER_ROLES : has
    ROLES ||--o{ USER_ROLES : assigned_to
    USERS ||--o| PRO_PROFILES : may_have
    USERS ||--o{ BILLING_DETAILS : stores

    PRO_PROFILES ||--o{ SERVICES : offers
    PRO_PROFILES ||--o{ SCHEDULES : defines
    USERS ||--o{ BOOKINGS : makes
    PRO_PROFILES ||--o{ BOOKINGS : receives
    SERVICES ||--o{ BOOKINGS : booked_as

    BOOKINGS ||--o{ BOOKING_HISTORY : records
    BOOKINGS ||--o{ INVOICES : generates
    BOOKINGS ||--o{ PAYMENTS : paid_by
    PAYMENTS }o--o| INVOICES : linked_to
    BILLING_DETAILS ||--o{ INVOICES : used_for
    INVOICES ||--o{ INVOICES : rectifies

    USERS ||--o{ THREADS : starts
    PRO_PROFILES ||--o{ THREADS : participates
    BOOKINGS ||--o{ THREADS : relates_to
    THREADS ||--o{ MESSAGES : contains
    USERS ||--o{ MESSAGES : sends
    USERS ||--o{ SUPPORT_TICKETS : opens

    THREADS ||--o{ MESSAGES : contiene
